--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
+
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
 
@@ -44,5 +45,11 @@ dependencies {
     implementation 'com.neopixl:spitfire:1.1.0'
     implementation 'com.android.volley:volley:1.0.0'
 
+
+
+
+    implementation 'com.neopixl:spitfire:1.1.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 }
